Fix LayoutInline::visualOverflowRect() with outline in non-standard mode

In non-standard mode, LayoutInline::linesVisualOverflowBoundingBox()
doesn't necessarily cover outline rects of line boxes because we treat
the line height differently when a line contains replaced elements
in LayoutBlock::minLineHeightForReplacedObject().

BUG=626992
TEST=paint/invalidation/outline-containing-image-in-non-standard-mode.html

Review-Url: https://codereview.chromium.org/2134413002
Cr-Commit-Position: refs/heads/master@{#404869}

Former-commit-id: b62027f56fdb4906393fe60105d33194e907624a